feat(core): rename thumbnail target contract
